--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1158,6 +1158,7 @@ body {
 		margin: 0 auto;
 		padding: 95px 102.5px;
 		position: relative;
+		flex-wrap: wrap;
 
 		.columns {
 			width: 50%;
@@ -1210,6 +1211,21 @@ body {
 			font-weight: bold;
 			font-size: 10px;
 			line-height: 10px;
+		}
+	}
+
+	.full-row {
+		padding-top: 95px;
+		width: 100%;
+
+		h2 {
+			color: #000;
+			font-family: "Raleway", sans-serif;
+			font-style: normal;
+			font-weight: bold;
+			font-size: 28px;
+			line-height: 28px;
+			text-align: center;
 		}
 	}
 
@@ -1285,6 +1301,17 @@ body {
 			p {
 				font-size: 16px;
 				line-height: 24px;
+			}
+		}
+
+		.full-row {
+			padding-top: 61px;
+			width: 100%;
+
+			h2 {
+				font-weight: 600;
+				font-size: 22px;
+				line-height: 31px;
 			}
 		}
 	}
@@ -2232,8 +2259,52 @@ body {
 	background: #0C2F4B;
 	display: flex;
 
+	&.grey {
+		background: #f1f1f1;
+
+		.content {
+			color: #000;
+
+			h2 {
+				color: #000;
+			}
+
+			p {
+				color: #000;
+			}
+
+			a {
+				color: #000;
+			}
+		}
+	}
+
+	&.reverse {
+		flex-direction: row-reverse;
+
+		.content {
+			padding: 105px 75px 105px 15px;
+		}
+	}
+
 	img {
 		width: 50%;
+	}
+
+	.img-wrapper {
+		width: 50%;
+		overflow: hidden;
+		position: relative;
+
+		img {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			min-height: 100%;
+			min-width: 100%;
+
+			transform: translate(-50%, -50%);
+		}
 	}
 
 	.content {
@@ -2274,6 +2345,27 @@ body {
 	.fullimage-text-block {
 		flex-direction: column;
 		padding: 50px 15px;
+
+		& ~ .fullimage-text-block {
+			padding-top: 0;
+		}
+
+		&.reverse {
+			flex-direction: column;
+
+			.content {
+				padding: 0;
+			}
+		}
+
+		.img-wrapper {
+			width: 100%;
+
+			img {
+				position: static;
+				transform: translate(0,0);
+			}
+		}
 
 		img {
 			width: 100%;
@@ -3817,10 +3909,6 @@ body {
 		i {
 			font-style: italic;
 		}
-	}
-
-	.play-video {
-		cursor: pointer;
 	}
 }
 
@@ -5773,6 +5861,38 @@ body {
 		background: #f1f1f1;
 	}
 
+	&.blue {
+		background: #0C2F4B;
+
+		.two-columns {
+			.column {
+				&.quote {
+					border-color: #fff;
+				}
+			}
+
+			.quote-symbol {
+				color: #fff;
+			}
+
+			.quote-text {
+				color: #fff;
+			}
+
+			.link-underline {
+				color: #fff;
+
+				&:after {
+					background: #fff;
+				}
+			}
+
+			.quote-author {
+				color: #fff;
+			}
+		}
+	}
+
 	.two-columns {
 		max-width: 1210px;
 		margin: 0 auto;
@@ -5780,6 +5900,27 @@ body {
 
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
+
+		&.has-slider {
+			padding: 95px 48px;
+		}
+
+		.full-row {
+			width: 100%;
+
+			h2 {
+				margin-bottom: 62px;
+
+				color: #fff;
+				font-family: "Raleway", sans-serif;
+				font-style: normal;
+				font-weight: bold;
+				font-size: 28px;
+				line-height: 28px;
+				text-align: center;
+			}
+		}
 
 		.column {
 			max-width: 553px;
@@ -6007,14 +6148,90 @@ body {
 		.link-underline {
 			margin-bottom: 20px;
 		}
+
+		.owl-item {
+			padding: 0 31px;
+		}
+
+		.owl-nav .owl-prev,
+		.owl-nav .owl-next {
+			height: 48px;
+			position: absolute;
+			top: 50%;
+			width: 48px;
+
+			font-size: 0;
+
+			transform: translateY(-50%);
+			transition: background-image 0.2s ease-in-out;
+		}
+
+		.owl-nav .owl-prev {
+			@extend .svg-arrow-left-white;
+
+			left: -48px;
+
+			&:hover {
+				@extend .svg-arrow-left-green;
+			}
+		}
+
+		.owl-nav .owl-next {
+			@extend .svg-arrow-right-white;
+
+			right: -48px;
+
+			&:hover {
+				@extend .svg-arrow-right-green;
+			}
+		}
+
+		.owl-dots {
+			display: none;
+		}
 	}
 }
 
 @media screen and (max-width: 1280px) {
 	.two-columns-wrapper {
 		.two-columns {
+			&.has-slider {
+				padding: 51px 15px;
+			}
+
 			.column {
 				margin: 0 7.5px;
+			}
+
+			.owl-item {
+				padding: 0;
+			}
+			
+			.owl-nav .owl-prev,
+			.owl-nav .owl-next {
+				display: none;
+			}
+
+			.owl-dots {
+				margin-top: 55px;
+				display: block;
+
+				text-align: center;
+			}
+
+			.owl-dot {
+				background: #fff;
+				border: 0 none;
+				border-radius: 100%;
+
+				width: 10px;
+				height: 10px;
+				margin: 0 7.5px;
+				opacity: 0.4;
+
+				&.active {
+					opacity: 1;
+				}
 			}
 		}
 	}
@@ -7438,6 +7655,7 @@ body .ui-tooltip.ui-widget-content {
 }
 
 .play-video {
+	cursor: pointer;
 	position: relative;
 
 	&:after {
@@ -8357,6 +8575,296 @@ body .ui-tooltip.ui-widget-content {
 
 				font-size: 16px;
 				line-height: 20px;
+			}
+		}
+	}
+}
+
+.teams-wrapper {
+	.teams-content {
+		max-width: 1210px;
+		padding: 135px 15px 81px;
+		margin: 0 auto;
+
+		h2 {
+			margin-bottom: 62px;
+
+			color: #000;
+			font-family: "Raleway", sans-serif;
+			font-style: normal;
+			font-weight: bold;
+			font-size: 28px;
+			line-height: 28px;
+			text-align: center;
+		}
+
+		.collapsed-list {
+			.list-item {
+				margin-bottom: 2px;
+
+				&.collapsed {
+					h3 {
+						border-radius: 3px;
+
+						&:after {
+							transform: rotate(90deg) scale(0.4);
+						}
+					}
+				}
+
+				h3 {
+					background: #0C2F4B;
+					border-radius: 3px 3px 0 0;
+
+					cursor: pointer;
+
+					padding: 12px 45px 12px 20px;
+					position: relative;
+
+					color: #fff;
+					font-family: "Raleway", sans-serif;
+					font-style: normal;
+					font-weight: 600;
+					font-size: 16px;
+					line-height: 22px;
+					letter-spacing: 0.03em;
+
+					&:after {
+						@extend .svg-arrow-right-white;
+						@extend .svg-arrow-right-white-dims;
+
+						content: '';
+						position: absolute;
+						top: 0;
+						right: 0;
+
+						transition: background-image 0.2s ease-in-out;
+						transform: rotate(-90deg) scale(0.4);
+					}
+				}
+
+				li {
+					margin-bottom: 10px;
+
+					color: #000;
+					font-family: "Raleway", sans-serif;
+					font-style: normal;
+					font-weight: normal;
+					font-size: 16px;
+					line-height: 24px;
+				}
+
+				.link-underline {
+					font-style: normal;
+					font-weight: normal;
+					font-size: 16px;
+					line-height: 24px;
+					text-transform: none;
+
+					&:after {
+						margin-top: -2px;
+						height: 1px;
+					}
+				}
+			}
+
+			.content {
+				background: #f1f1f1;
+				border-radius: 0 0 3px 3px;
+
+				padding: 12px 20px;
+			}
+		}
+
+		.bottom {
+			margin-top: 81px;
+
+			text-align: center;
+		}
+
+		p {
+			margin-bottom: 24px;
+
+			color: #000;
+			font-family: "Raleway", sans-serif;
+			font-style: normal;
+			font-weight: normal;
+			font-size: 16px;
+			line-height: 24px;
+		}
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.teams-wrapper {
+		.teams-content {
+			padding: 61px 15px 81px;
+
+			.collapsed-list {
+				.list-item {
+					h3 {
+						padding: 18px 36px 18px 16px;
+
+						&:after {
+							top: 5px;
+						}
+					}
+
+					.content {
+						padding: 18px 16px;
+					}
+				}
+			}
+		}
+	}
+}
+
+.benefits-wrapper {
+	.benefits-content {
+		padding: 135px 15px;
+		max-width: 1210px;
+		margin: 0 auto;
+
+		h2 {
+			margin-bottom: 69px;
+
+			color: #000;
+			font-family: "Raleway", sans-serif;
+			font-style: normal;
+			font-weight: bold;
+			font-size: 28px;
+			line-height: 28px;
+			text-align: center;
+		}
+	}
+
+	.benefit-list {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -8px;
+
+		.benefit {
+			border-radius: 3px;
+
+			overflow: hidden;
+			height: 265px;
+			margin: 7px;
+			position: relative;
+			width: 225px;
+
+			// visibility: hidden;
+			// opacity: 0;
+			// transform: matrix(1, 0, 0, 1, 0, 450);
+			// transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+
+			// &.show {
+			// 	visibility: visible;
+			// 	transform: matrix(1, 0, 0, 1, 0, 0);
+			// 	opacity: 1;
+			// }
+
+			&:before {
+				background: linear-gradient(180deg, rgba(0, 0, 0, 0) 34.64%, #000000 87.5%);
+				content: '';
+				display: block;
+				position: absolute;
+				// padding-top: min(100%, 300px);
+				padding-top: 265px;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				z-index: 1;
+			}
+		}
+
+		img {
+			border-radius: 3px;
+			position: absolute;
+			top: 0;
+			left: 0;
+			max-width: 100%;
+			z-index: 0;
+		}
+
+		h3 {
+			max-width: 200px;
+			margin: 0 auto 15px;
+			position: relative;
+			z-index: 2;
+			min-height: 62px;
+
+
+			color: #fff;
+			font-family: "Raleway", sans-serif;
+			font-style: normal;
+			font-weight: 600;
+			font-size: 22px;
+			line-height: 31px;
+			text-align: center;
+
+
+			transition: margin 1s;
+		}
+
+		.tile-content {
+			position: relative;
+			height: 100%;
+			top: 189px;
+			max-height: 265px;
+
+			transition: top 1s;
+
+			ul {
+				padding-left: 20px;
+				width: 200px;
+				margin: 0 auto 20px;
+				position: relative;
+				list-style: disc;
+				z-index: 2;
+
+				color: #fff;
+				font-style: normal;
+				font-weight: 600;
+				font-size: 13px;
+				line-height: 18px;
+				text-align: left;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.benefits-wrapper {
+		.benefits-content {
+			padding: 61px 15px;
+		}
+
+		.benefit-list {
+			.benefit {
+				width: 183px;
+				height: 200px;
+				margin: 8px;
+			}
+
+			h3 {
+				min-height: 48px;
+				margin-bottom: 11px;
+				max-width: 163px;
+
+				font-size: 16px;
+				line-height: 24px;
+			}
+
+			.tile-content {
+				top: 140px;
+
+				ul {
+					max-width: 163px;
+					margin-bottom: 15px;
+
+					font-size: 11px;
+					line-height: 15px;
+				}
 			}
 		}
 	}
