--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -7751,9 +7751,14 @@ body .ui-tooltip.ui-widget-content {
 			color: #000;
 			font-family: "Raleway", sans-serif;
 			font-style: normal;
-			font-weight: 600;
+			font-weight: 400;
 			font-size: 22px;
 			line-height: 31px;
+		}
+
+		a {
+			color: #388067;
+			font-weight: 600;
 		}
 	}
 
@@ -8871,5 +8876,96 @@ body .ui-tooltip.ui-widget-content {
 				}
 			}
 		}
+	}
+}
+
+.jp-audio {
+	margin: 20px 0;
+
+	.jp-interface {
+		display: flex;
+	}
+	.jp-controls {
+		display: flex;
+		margin: 0 -10px;
+
+		li {
+			padding: 0 5px;
+
+			vertical-align: middle;
+			line-height: 32px;
+		}
+
+		.jp-play {
+			@extend .svg-audio-play;
+			@extend .svg-audio-play-dims;
+
+			display: block;
+			margin: 4px 6px;
+		}
+
+		.jp-pause {
+			@extend .svg-audio-pause;
+			@extend .svg-audio-pause-dims;
+
+			display: block;
+		}
+
+		.jp-backward {
+			@extend .svg-backward-10;
+			@extend .svg-backward-10-dims;
+
+			display: block;
+		}
+
+		.jp-forward {
+			@extend .svg-forward-30;
+			@extend .svg-forward-30-dims;
+
+			display: block;
+		}
+	}
+
+	.jp-progress {
+		padding: 0;
+		width: 100%;
+
+		.jp-seek-bar {
+			background: #AAAAAA;
+			border-radius: 100px;
+
+			height: 2px;
+			width: 100%;
+			margin-top: -1px;
+			position: relative;
+			top: 50%;
+
+			.ui-slider-handle {
+				background: #388067;
+				border-radius: 100%;
+				border: 0 none;
+
+				height: 14px;
+				margin-left: -7px;
+				top: -7px;
+				width: 14px;
+			}
+		}
+	}
+
+	.jp-time-left,
+	.jp-current-time {
+		padding: 0 10px;
+
+		color: #94A3AC;
+		font-family: Nunito;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 12px;
+		line-height: 32px;
+	}
+
+	.jp-time-left {
+		margin-right: -10px;
 	}
 }
