--- a/sass/sprite.scss
+++ b/sass/sprite.scss
@@ -1,10 +1,10 @@
 %svg-common {
-	background: url("svg/sprite.css-ddad1de1.svg") no-repeat;
+	background: url("svg/sprite.css-73a2ee09.svg") no-repeat;
 }
 
 .svg-archived-memo {
 	@extend %svg-common;
-	background-position: 15.09433962264151% 100%;
+	background-position: 51.851851851851855% 100%;
 }
 
 .svg-archived-memo-dims {
@@ -14,7 +14,7 @@
 
 .svg-archived-memo-blue {
 	@extend %svg-common;
-	background-position: 100% 40.4040404040404%;
+	background-position: 98.14814814814815% 89.56228956228956%;
 }
 
 .svg-archived-memo-blue-dims {
@@ -24,7 +24,7 @@
 
 .svg-arrow-down {
 	@extend %svg-common;
-	background-position: 76.38036809815951% 61.63934426229508%;
+	background-position: 43.373493975903614% 47.868852459016395%;
 }
 
 .svg-arrow-down-dims {
@@ -34,7 +34,7 @@
 
 .svg-arrow-down-blue {
 	@extend %svg-common;
-	background-position: 44.44444444444444% 47.524752475247524%;
+	background-position: 38.78787878787879% 31.683168316831683%;
 }
 
 .svg-arrow-down-blue-dims {
@@ -44,7 +44,7 @@
 
 .svg-arrow-down-green {
 	@extend %svg-common;
-	background-position: 30.246913580246915% 31.023102310231025%;
+	background-position: 59.39393939393939% 46.864686468646866%;
 }
 
 .svg-arrow-down-green-dims {
@@ -54,7 +54,7 @@
 
 .svg-arrow-down-light-green {
 	@extend %svg-common;
-	background-position: 72.53086419753086% 77.55775577557756%;
+	background-position: 44.24242424242424% 31.683168316831683%;
 }
 
 .svg-arrow-down-light-green-dims {
@@ -64,7 +64,7 @@
 
 .svg-arrow-left-black {
 	@extend %svg-common;
-	background-position: 59.863945578231295% 0;
+	background-position: 58.666666666666664% 0;
 }
 
 .svg-arrow-left-black-dims {
@@ -74,7 +74,7 @@
 
 .svg-arrow-left-green {
 	@extend %svg-common;
-	background-position: 17.006802721088434% 23.44322344322344%;
+	background-position: 16.666666666666668% 23.44322344322344%;
 }
 
 .svg-arrow-left-green-dims {
@@ -84,7 +84,7 @@
 
 .svg-arrow-left-white {
 	@extend %svg-common;
-	background-position: 43.53741496598639% 0;
+	background-position: 42.666666666666664% 0;
 }
 
 .svg-arrow-left-white-dims {
@@ -94,7 +94,7 @@
 
 .svg-arrow-right-black {
 	@extend %svg-common;
-	background-position: 43.53741496598639% 17.582417582417584%;
+	background-position: 42.666666666666664% 17.582417582417584%;
 }
 
 .svg-arrow-right-black-dims {
@@ -114,7 +114,7 @@
 
 .svg-arrow-right-light-green {
 	@extend %svg-common;
-	background-position: 16.3265306122449% 41.75824175824176%;
+	background-position: 16% 41.75824175824176%;
 }
 
 .svg-arrow-right-light-green-dims {
@@ -124,7 +124,7 @@
 
 .svg-arrow-right-white {
 	@extend %svg-common;
-	background-position: 32.6530612244898% 41.75824175824176%;
+	background-position: 32% 41.75824175824176%;
 }
 
 .svg-arrow-right-white-dims {
@@ -134,7 +134,7 @@
 
 .svg-arrow-up {
 	@extend %svg-common;
-	background-position: 92.33128834355828% 73.11475409836065%;
+	background-position: 29.518072289156628% 30.81967213114754%;
 }
 
 .svg-arrow-up-dims {
@@ -142,9 +142,39 @@
 	height: 16px;
 }
 
+.svg-audio-pause {
+	@extend %svg-common;
+	background-position: 45.56962025316456% 39.44636678200692%;
+}
+
+.svg-audio-pause-dims {
+	width: 32px;
+	height: 32px;
+}
+
+.svg-audio-play {
+	@extend %svg-common;
+	background-position: 96.95121951219512% 57.23905723905724%;
+}
+
+.svg-audio-play-dims {
+	width: 20px;
+	height: 24px;
+}
+
+.svg-backward-10 {
+	@extend %svg-common;
+	background-position: 59.49367088607595% 56.055363321799305%;
+}
+
+.svg-backward-10-dims {
+	width: 32px;
+	height: 32px;
+}
+
 .svg-burger {
 	@extend %svg-common;
-	background-position: 70.66246056782335% 61.63934426229508%;
+	background-position: 98.45201238390094% 26.885245901639344%;
 }
 
 .svg-burger-dims {
@@ -154,7 +184,7 @@
 
 .svg-checkbox {
 	@extend %svg-common;
-	background-position: 60.869565217391305% 47.17607973421927%;
+	background-position: 78.65853658536585% 98.67109634551495%;
 }
 
 .svg-checkbox-dims {
@@ -164,7 +194,7 @@
 
 .svg-checkbox-checked {
 	@extend %svg-common;
-	background-position: 54.6583850931677% 47.17607973421927%;
+	background-position: 68.29268292682927% 62.458471760797345%;
 }
 
 .svg-checkbox-checked-dims {
@@ -174,7 +204,7 @@
 
 .svg-chevron {
 	@extend %svg-common;
-	background-position: 100% 48.484848484848484%;
+	background-position: 44.44444444444444% 100%;
 }
 
 .svg-chevron-dims {
@@ -184,7 +214,7 @@
 
 .svg-chevron-green {
 	@extend %svg-common;
-	background-position: 100% 16.161616161616163%;
+	background-position: 7.407407407407407% 100%;
 }
 
 .svg-chevron-green-dims {
@@ -194,7 +224,7 @@
 
 .svg-close {
 	@extend %svg-common;
-	background-position: 31.41025641025641% 21.993127147766323%;
+	background-position: 100% 0;
 }
 
 .svg-close-dims {
@@ -204,7 +234,7 @@
 
 .svg-close-black {
 	@extend %svg-common;
-	background-position: 46.15384615384615% 39.175257731958766%;
+	background-position: 73.8993710691824% 71.8213058419244%;
 }
 
 .svg-close-black-dims {
@@ -214,7 +244,7 @@
 
 .svg-close-blue {
 	@extend %svg-common;
-	background-position: 86.85897435897436% 76.63230240549828%;
+	background-position: 30.81761006289308% 21.993127147766323%;
 }
 
 .svg-close-blue-dims {
@@ -224,7 +254,7 @@
 
 .svg-download {
 	@extend %svg-common;
-	background-position: 100% 56.56565656565657%;
+	background-position: 14.814814814814815% 100%;
 }
 
 .svg-download-dims {
@@ -234,7 +264,7 @@
 
 .svg-download-blue {
 	@extend %svg-common;
-	background-position: 100% 24.242424242424242%;
+	background-position: 0 100%;
 }
 
 .svg-download-blue-dims {
@@ -244,7 +274,7 @@
 
 .svg-ellipse {
 	@extend %svg-common;
-	background-position: 94.64285714285714% 91.42857142857143%;
+	background-position: 100% 31.11111111111111%;
 }
 
 .svg-ellipse-dims {
@@ -254,7 +284,7 @@
 
 .svg-ellipse-empty {
 	@extend %svg-common;
-	background-position: 100% 88.88888888888889%;
+	background-position: 98.14814814814815% 81.48148148148148%;
 }
 
 .svg-ellipse-empty-dims {
@@ -264,7 +294,7 @@
 
 .svg-ellipse-selected {
 	@extend %svg-common;
-	background-position: 100% 64.64646464646465%;
+	background-position: 98.14814814814815% 65.31986531986531%;
 }
 
 .svg-ellipse-selected-dims {
@@ -274,7 +304,7 @@
 
 .svg-facebook {
 	@extend %svg-common;
-	background-position: 91.86440677966101% 17.153284671532848%;
+	background-position: 0 76.27737226277372%;
 }
 
 .svg-facebook-dims {
@@ -284,7 +314,7 @@
 
 .svg-facebook-green-fill {
 	@extend %svg-common;
-	background-position: 15.932203389830509% 76.27737226277372%;
+	background-position: 46.84385382059801% 59.12408759124087%;
 }
 
 .svg-facebook-green-fill-dims {
@@ -294,7 +324,7 @@
 
 .svg-facebook-green-outline {
 	@extend %svg-common;
-	background-position: 0 76.27737226277372%;
+	background-position: 31.229235880398672% 59.12408759124087%;
 }
 
 .svg-facebook-green-outline-dims {
@@ -304,7 +334,7 @@
 
 .svg-facebook-white {
 	@extend %svg-common;
-	background-position: 47.79661016949152% 59.12408759124087%;
+	background-position: 90.03322259136213% 34.306569343065696%;
 }
 
 .svg-facebook-white-dims {
@@ -314,7 +344,7 @@
 
 .svg-folder {
 	@extend %svg-common;
-	background-position: 45.962732919254655% 31.683168316831683%;
+	background-position: 74.39024390243902% 62.04620462046205%;
 }
 
 .svg-folder-dims {
@@ -324,7 +354,7 @@
 
 .svg-folder-blue {
 	@extend %svg-common;
-	background-position: 39.75155279503105% 31.683168316831683%;
+	background-position: 53.65853658536585% 46.864686468646866%;
 }
 
 .svg-folder-blue-dims {
@@ -332,9 +362,19 @@
 	height: 18px;
 }
 
+.svg-forward-30 {
+	@extend %svg-common;
+	background-position: 85.75949367088607% 77.16262975778547%;
+}
+
+.svg-forward-30-dims {
+	width: 32px;
+	height: 32px;
+}
+
 .svg-info {
 	@extend %svg-common;
-	background-position: 58.38509316770186% 62.458471760797345%;
+	background-position: 72.5609756097561% 98.67109634551495%;
 }
 
 .svg-info-dims {
@@ -344,7 +384,7 @@
 
 .svg-insights-article {
 	@extend %svg-common;
-	background-position: 51.973684210526315% 90.45936395759718%;
+	background-position: 26.451612903225808% 90.45936395759718%;
 }
 
 .svg-insights-article-dims {
@@ -354,7 +394,7 @@
 
 .svg-insights-article-hover {
 	@extend %svg-common;
-	background-position: 64.47368421052632% 90.45936395759718%;
+	background-position: 87.74193548387096% 90.45936395759718%;
 }
 
 .svg-insights-article-hover-dims {
@@ -364,7 +404,7 @@
 
 .svg-insights-audio {
 	@extend %svg-common;
-	background-position: 26.973684210526315% 90.45936395759718%;
+	background-position: 75.48387096774194% 90.45936395759718%;
 }
 
 .svg-insights-audio-dims {
@@ -374,7 +414,7 @@
 
 .svg-insights-audio-hover {
 	@extend %svg-common;
-	background-position: 89.47368421052632% 90.45936395759718%;
+	background-position: 63.225806451612904% 90.45936395759718%;
 }
 
 .svg-insights-audio-hover-dims {
@@ -384,7 +424,7 @@
 
 .svg-insights-video {
 	@extend %svg-common;
-	background-position: 76.97368421052632% 90.45936395759718%;
+	background-position: 50.96774193548387% 90.45936395759718%;
 }
 
 .svg-insights-video-dims {
@@ -394,7 +434,7 @@
 
 .svg-insights-video-hover {
 	@extend %svg-common;
-	background-position: 39.473684210526315% 90.45936395759718%;
+	background-position: 38.70967741935484% 90.45936395759718%;
 }
 
 .svg-insights-video-hover-dims {
@@ -404,7 +444,7 @@
 
 .svg-linkedin {
 	@extend %svg-common;
-	background-position: 91.86440677966101% 34.306569343065696%;
+	background-position: 15.614617940199336% 76.27737226277372%;
 }
 
 .svg-linkedin-dims {
@@ -414,7 +454,7 @@
 
 .svg-linkedin-green-fill {
 	@extend %svg-common;
-	background-position: 31.864406779661017% 59.12408759124087%;
+	background-position: 90.03322259136213% 17.153284671532848%;
 }
 
 .svg-linkedin-green-fill-dims {
@@ -424,7 +464,7 @@
 
 .svg-linkedin-green-outline {
 	@extend %svg-common;
-	background-position: 91.86440677966101% 0;
+	background-position: 90.03322259136213% 0;
 }
 
 .svg-linkedin-green-outline-dims {
@@ -434,7 +474,7 @@
 
 .svg-linkedin-white {
 	@extend %svg-common;
-	background-position: 63.728813559322035% 76.27737226277372%;
+	background-position: 62.458471760797345% 76.27737226277372%;
 }
 
 .svg-linkedin-white-dims {
@@ -444,7 +484,7 @@
 
 .svg-listen {
 	@extend %svg-common;
-	background-position: 7.547169811320755% 100%;
+	background-position: 98.14814814814815% 41.07744107744108%;
 }
 
 .svg-listen-dims {
@@ -454,7 +494,7 @@
 
 .svg-listen-blue {
 	@extend %svg-common;
-	background-position: 100% 8.080808080808081%;
+	background-position: 98.14814814814815% 49.158249158249156%;
 }
 
 .svg-listen-blue-dims {
@@ -464,7 +504,7 @@
 
 .svg-mail-green-fill {
 	@extend %svg-common;
-	background-position: 47.79661016949152% 76.27737226277372%;
+	background-position: 46.84385382059801% 76.27737226277372%;
 }
 
 .svg-mail-green-fill-dims {
@@ -474,7 +514,7 @@
 
 .svg-mail-green-outline {
 	@extend %svg-common;
-	background-position: 31.864406779661017% 76.27737226277372%;
+	background-position: 31.229235880398672% 76.27737226277372%;
 }
 
 .svg-mail-green-outline-dims {
@@ -484,7 +524,7 @@
 
 .svg-map-icon {
 	@extend %svg-common;
-	background-position: 100% 32.323232323232325%;
+	background-position: 98.14814814814815% 73.4006734006734%;
 }
 
 .svg-map-icon-dims {
@@ -494,7 +534,7 @@
 
 .svg-search {
 	@extend %svg-common;
-	background-position: 59.49367088607595% 54.91525423728814%;
+	background-position: 98.75776397515529% 10.169491525423728%;
 }
 
 .svg-search-dims {
@@ -504,7 +544,7 @@
 
 .svg-search-blue {
 	@extend %svg-common;
-	background-position: 74.36708860759494% 70.84745762711864%;
+	background-position: 98.75776397515529% 18.983050847457626%;
 }
 
 .svg-search-blue-dims {
@@ -514,7 +554,7 @@
 
 .svg-search-icon {
 	@extend %svg-common;
-	background-position: 90.03322259136213% 50.357142857142854%;
+	background-position: 88.27361563517915% 50.357142857142854%;
 }
 
 .svg-search-icon-dims {
@@ -524,7 +564,7 @@
 
 .svg-search-icon-hover {
 	@extend %svg-common;
-	background-position: 90.03322259136213% 65%;
+	background-position: 88.27361563517915% 65%;
 }
 
 .svg-search-icon-hover-dims {
@@ -534,7 +574,7 @@
 
 .svg-search-type-all {
 	@extend %svg-common;
-	background-position: 100% 72.72727272727273%;
+	background-position: 98.14814814814815% 32.996632996633%;
 }
 
 .svg-search-type-all-dims {
@@ -544,7 +584,7 @@
 
 .svg-search-type-insights {
 	@extend %svg-common;
-	background-position: 100% 80.8080808080808%;
+	background-position: 22.22222222222222% 100%;
 }
 
 .svg-search-type-insights-dims {
@@ -554,7 +594,7 @@
 
 .svg-search-type-people {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 29.62962962962963% 100%;
 }
 
 .svg-search-type-people-dims {
@@ -564,7 +604,7 @@
 
 .svg-search-type-strategies {
 	@extend %svg-common;
-	background-position: 0 100%;
+	background-position: 37.03703703703704% 100%;
 }
 
 .svg-search-type-strategies-dims {
@@ -574,7 +614,7 @@
 
 .svg-twitter {
 	@extend %svg-common;
-	background-position: 75.9322033898305% 51.45985401459854%;
+	background-position: 74.4186046511628% 51.45985401459854%;
 }
 
 .svg-twitter-dims {
@@ -584,7 +624,7 @@
 
 .svg-twitter-green-fill {
 	@extend %svg-common;
-	background-position: 75.9322033898305% 34.306569343065696%;
+	background-position: 74.4186046511628% 34.306569343065696%;
 }
 
 .svg-twitter-green-fill-dims {
@@ -594,7 +634,7 @@
 
 .svg-twitter-green-outline {
 	@extend %svg-common;
-	background-position: 75.9322033898305% 17.153284671532848%;
+	background-position: 74.4186046511628% 17.153284671532848%;
 }
 
 .svg-twitter-green-outline-dims {
@@ -604,7 +644,7 @@
 
 .svg-twitter-white {
 	@extend %svg-common;
-	background-position: 59.66101694915254% 17.51824817518248%;
+	background-position: 58.47176079734219% 17.51824817518248%;
 }
 
 .svg-twitter-white-dims {
@@ -624,7 +664,7 @@
 
 .svg-user-hover {
 	@extend %svg-common;
-	background-position: 13.621262458471762% 91.42857142857143%;
+	background-position: 13.355048859934854% 91.42857142857143%;
 }
 
 .svg-user-hover-dims {
@@ -644,7 +684,7 @@
 
 .svg-video-play {
 	@extend %svg-common;
-	background-position: 23.02158273381295% 0;
+	background-position: 22.535211267605632% 0;
 }
 
 .svg-video-play-dims {
@@ -664,7 +704,7 @@
 
 .svg-view-all-blue {
 	@extend %svg-common;
-	background-position: 29.780564263322884% 99.66442953020135%;
+	background-position: 66.15384615384616% 99.66442953020135%;
 }
 
 .svg-view-all-blue-dims {
@@ -674,7 +714,7 @@
 
 .svg-view-all-green {
 	@extend %svg-common;
-	background-position: 22.570532915360502% 99.66442953020135%;
+	background-position: 59.07692307692308% 99.66442953020135%;
 }
 
 .svg-view-all-green-dims {
@@ -694,7 +734,7 @@
 
 .svg-youtube-green-fill {
 	@extend %svg-common;
-	background-position: 59.66101694915254% 34.67153284671533%;
+	background-position: 58.47176079734219% 34.67153284671533%;
 }
 
 .svg-youtube-green-fill-dims {
@@ -704,7 +744,7 @@
 
 .svg-youtube-green-outline {
 	@extend %svg-common;
-	background-position: 75.9322033898305% 0;
+	background-position: 74.4186046511628% 0;
 }
 
 .svg-youtube-green-outline-dims {
@@ -714,7 +754,7 @@
 
 .svg-youtube-white {
 	@extend %svg-common;
-	background-position: 15.932203389830509% 59.12408759124087%;
+	background-position: 15.614617940199336% 59.12408759124087%;
 }
 
 .svg-youtube-white-dims {
