--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -7748,6 +7748,10 @@ body .ui-tooltip.ui-widget-content {
 				max-height: none;
 				margin-bottom: 0;
 			}
+
+			video {
+				max-width: 100%;
+			}
 		}
 
 		h1 {
